--- a/templates/accounts/company_dashboard.html
+++ b/templates/accounts/company_dashboard.html
@@ -91,7 +91,7 @@
                                 </a>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium space-x-2">
-                                <a href="{% url 'jobs:job_detail' job.pk %}" target="_blank" class="text-indigo-600 hover:text-indigo-900" title="Vezi Anunț"><i class="fas fa-eye"></i></a>
+                                <a href="{{ job.get_absolute_url }}" target="_blank" class="text-indigo-600 hover:text-indigo-900" title="Vezi Anunț"><i class="fas fa-eye"></i></a> {# Use get_absolute_url (slug) #}
                                 <a href="{% url 'jobs:job_edit' job.pk %}" class="text-yellow-600 hover:text-yellow-900" title="Editează"><i class="fas fa-pencil-alt"></i></a> {# Link to job_edit URL #}
                                 <a href="#" class="text-red-600 hover:text-red-900" title="Șterge"><i class="fas fa-trash"></i></a> {# Placeholder for Delete URL #}
                             </td>
