refactor: rename brand from JoburiPentruRomani to JoburiExpress
Update all references to the old brand name in templates, settings, emails and documentation to reflect the new brand name JoburiExpress. This includes title blocks, email subjects, contact information and system messages.

--- a/payments/templates/payments/payment_cancel.html
+++ b/payments/templates/payments/payment_cancel.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Payment Cancelled - JoburiPentruRomani{% endblock %}
+{% block title %}Payment Cancelled - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8 text-center">
