--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -8,7 +8,7 @@
     {% else %}
         Profil Utilizator
     {% endif %}
-    - {{ user.username }} - JoburiPentruRomani
+    - {{ user.username }} - JoburiExpress
 {% endblock %}
 
 {% block content %}
