--- a/templates/company/company_detail.html
+++ b/templates/company/company_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{{ company_profile.company_name|default:company_user.username }} - Detalii Companie - JoburiPentruRomani{% endblock %}
+{% block title %}{{ company_profile.company_name|default:company_user.username }} - Detalii Companie - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
