--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Contact - JoburiPentruRomani{% endblock %}
+{% block title %}Contact - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-12">
@@ -23,7 +23,7 @@
                     </li>
                     <li class="flex items-center">
                         <i class="fas fa-envelope w-5 mr-3 text-blue-600"></i>
-                        <a href="mailto:contact@joburipentruromani.ro" class="hover:text-blue-700">contact@joburipentruromani.ro</a>
+                        <a href="mailto:contact@joburiexpress.ro" class="hover:text-blue-700">contact@joburiexpress.ro</a>
                     </li>
                     <li class="flex items-center">
                         <i class="fas fa-clock w-5 mr-3 text-blue-600"></i>
