--- a/templates/jobs/job_detail.html
+++ b/templates/jobs/job_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{{ job.title }} - JoburiPentruRomani{% endblock %}
+{% block title %}{{ job.title }} - JoburiExpress{% endblock %}
 
 {% block content %}
 {# Removed container mx-auto, added padding directly #}
