--- a/templates/jobs/job_form.html
+++ b/templates/jobs/job_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ page_title|default:"Job Form" }} - JoburiPentruRomani{% endblock %}
+{% block title %}{{ page_title|default:"Job Form" }} - JoburiExpress{% endblock %}
 
 
 {% block content %}
