--- a/templates/jobs/job_report_form.html
+++ b/templates/jobs/job_report_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ page_title|default:"Raportează Anunț" }} - JoburiPentruRomani{% endblock %}
+{% block title %}{{ page_title|default:"Raportează Anunț" }} - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="max-w-xl mx-auto mt-10 mb-10 bg-white p-8 rounded-lg shadow-md border border-gray-200">
