--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Autentificare - JoburiPentruRomani{% endblock %}
+{% block title %}Autentificare - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="max-w-md mx-auto mt-10 bg-white p-8 rounded-lg shadow-md border border-gray-200">
