--- a/templates/registration/signup_form.html
+++ b/templates/registration/signup_form.html
@@ -6,7 +6,7 @@
   {% else %}
     Înregistrare Candidat
   {% endif %}
-   - JoburiPentruRomani
+   - JoburiExpress
 {% endblock %}
 
 {% block content %}
