--- a/payments/templates/payments/payment_success.html
+++ b/payments/templates/payments/payment_success.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Payment Successful - JoburiPentruRomani{% endblock %}
+{% block title %}Payment Successful - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8 text-center">
