--- a/payments/templates/payments/plans.html
+++ b/payments/templates/payments/plans.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Planuri de Abonament - JoburiPentruRomani{% endblock %}
+{% block title %}Planuri de Abonament - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-12">
