--- a/templates/accounts/company_dashboard.html
+++ b/templates/accounts/company_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Dashboard Angajator - {{ profile.company_name|default:user.username }} - JoburiPentruRomani{% endblock %}
+{% block title %}Dashboard Angajator - {{ profile.company_name|default:user.username }} - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
