--- a/templates/accounts/jobseeker_dashboard.html
+++ b/templates/accounts/jobseeker_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Dashboard Candidat - {{ user.username }} - JoburiPentruRomani{% endblock %}
+{% block title %}Dashboard Candidat - {{ user.username }} - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
