--- a/templates/candidate/dashboard.html
+++ b/templates/candidate/dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Panou de control candidat - JoburiPentruRomani{% endblock %}
+{% block title %}Panou de control candidat - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
