--- a/templates/company/company_list.html
+++ b/templates/company/company_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Companii - JoburiPentruRomani{% endblock %}
+{% block title %}Companii - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
