--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Homepage - JoburiPentruRomani{% endblock %}
+{% block title %}Homepage - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
