--- a/templates/jobs/job_applications.html
+++ b/templates/jobs/job_applications.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Aplicații pentru {{ job.title }} - JoburiPentruRomani{% endblock %}
+{% block title %}Aplicații pentru {{ job.title }} - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
