--- a/templates/jobs/job_list.html
+++ b/templates/jobs/job_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Locuri de muncă - JoburiPentruRomani{% endblock %}
+{% block title %}Locuri de muncă - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
