--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Schimbare Parolă - JoburiPentruRomani{% endblock %}
+{% block title %}Schimbare Parolă - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="max-w-md mx-auto mt-10 mb-10 bg-white p-8 rounded-lg shadow-md border border-gray-200">
