--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Email Resetare Parolă Trimis - JoburiPentruRomani{% endblock %}
+{% block title %}Email Resetare Parolă Trimis - JoburiExpress{% endblock %}
 
 {% block content %}
 <div class="max-w-lg mx-auto mt-10 bg-white p-8 rounded-lg shadow-md border border-gray-200 text-center">
